--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "eggplant",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
     "discord-rich-presence": "0.0.8",
-    "fs": "0.0.1-security"
   }
 }
